<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Job Search</string>
    <string name="search_hint_keywords">"Должность, ключевые слова"</string>
    <string name="search_hint_relevant_vacancies">"Должность по подходящим вакансиям"</string>
    <string name="vacancies_for_you">Вакансии для вас</string>
    <string name="sort">По соответствию</string>
    <string name="view_all_vacancies">Просмотреть все вакансии</string>
    <string name="btn_vacancies_filter">Кнопка фильтр вакансий</string>
    <string name="favorite">Избранное</string>
    <string name="messages">Сообщения</string>
    <string name="profile">Профиль</string>
    <string name="responses">Отклики</string>
    <string name="vacancy_page">Страница вакансии</string>
    <string name="offer_icon">Иконка предложения</string>
    <string name="favorite_vacancy_icon">Иконка избранной вакансии</string>
    <string name="company_icon">Иконка компании</string>
    <string name="experience_icon">Иконка опыта работы</string>
    <string name="id_near_vacancies">near_vacancies</string>
    <string name="id_level_up_resume">level_up_resume</string>
    <string name="id_temporary_job">temporary_job</string>
    <string name="text_looking_number">Cейчас просматривает %1$s %2$s</string>
    <string name="text_publish_date">Опубликовано %1$s %2$s</string>
    <string name="text_all_vacancies">Еще %1$s</string>
    <string name="tools_text_number_of_vacancies">1 вакансия</string>
    <string name="number_of_vacancies">%1$s</string>
    <string name="number_of_favorite_vacancies">%1$s</string>
    <string name="tools_text_uplift">Поднять</string>
    <string name="tools_text_uplift_resume">Поднять резюме в поиске</string>
    <string name="tools_text_title">UI/UX дизайнер</string>
    <string name="tools_text_town">Минск</string>
    <string name="tools_text_company">Мобирикс</string>
    <string name="tools_text_experience">Опыт от 1 года до 3 лет</string>
    <string name="apply">Откликнуться</string>
    <string name="button_back">Вернуться на предыдущий экран</string>
    <string name="unknown_viewmodel_class">Unknown ViewModel class</string>
    <string name="error_loading">Ошибка загрузки."\n"Проверьте подключение к интернету</string>
    <string name="error_loading_page">Ошибка загрузки страницы: %1$s</string>
    <string name="nav_search">Поиск</string>
    <string name="nav_favorite">Избранное</string>
    <string name="nav_responses">Отклики</string>
    <string name="nav_messages">Сообщения</string>
    <string name="nav_profile">Профиль</string>
    <string name="go_to_main_screen">Переход к главному экрану</string>
    <string name="go_to_favorite_screen">Переход к экрану избранное</string>
    <string name="go_to_responses_screen">Переход к экрану отклики</string>
    <string name="go_to_message_screen">Переход к экрану сообщения</string>
    <string name="go_to_profile_screen">Переход к экрану профиль</string>
</resources>