<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/search_icon"
        android:title="@string/nav_search" />
    <item
        android:id="@+id/nav_favorite"
        android:icon="@drawable/heart"
        android:title="@string/nav_favorite" />
    <item
        android:id="@+id/nav_responses"
        android:icon="@drawable/response"
        android:title="@string/nav_responses" />
    <item
        android:id="@+id/nav_messages"
        android:icon="@drawable/message"
        android:title="@string/nav_messages" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/profile"
        android:title="@string/nav_profile" />
</menu>