<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/grey_1"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="233dp"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_looking_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/green"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/iv_favorite_vacancy_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/tools_text_looking_number" />

        <ImageView
            android:id="@+id/iv_favorite_vacancy_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/favorite_vacancy_icon"
            android:src="@drawable/heart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_looking_number"
            tools:text="@string/tools_text_title" />

        <TextView
            android:id="@+id/tv_town"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            tools:text="@string/tools_text_town" />

        <TextView
            android:id="@+id/tv_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_town"
            tools:text="@string/tools_text_company" />

        <ImageView
            android:id="@+id/iv_company_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/company_icon"
            android:src="@drawable/company_icon"
            app:layout_constraintBottom_toBottomOf="@id/tv_company"
            app:layout_constraintStart_toEndOf="@id/tv_company"
            app:layout_constraintTop_toTopOf="@id/tv_company" />

        <ImageView
            android:id="@+id/iv_experience_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/experience_icon"
            android:src="@drawable/experience_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_company" />

        <TextView
            android:id="@+id/tv_experience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_experience_icon"
            app:layout_constraintStart_toEndOf="@id/iv_experience_icon"
            app:layout_constraintTop_toTopOf="@id/iv_experience_icon"
            tools:text="@string/tools_text_experience" />

        <TextView
            android:id="@+id/tv_publish_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/grey_3"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_experience_icon"
            tools:text="@string/tools_text_publish_date" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_all_vacancies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:contentDescription="@string/view_all_vacancies"
            app:cornerRadius="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/tools_text_all_vacancies" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>