<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="132dp"
    android:layout_height="120dp"
    android:layout_marginEnd="8dp"
    android:backgroundTint="@color/grey_1"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/offer_icon"
            tools:src="@drawable/level_up_resume" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            android:textSize="14sp"
            tools:text="@string/tools_text_uplift_resume" />

        <TextView
            android:id="@+id/tv_uplift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/green"
            android:textSize="14sp"
            tools:text="@string/tools_text_uplift" />
    </LinearLayout>
</androidx.cardview.widget.CardView>