<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/shadows"
    android:padding="16dp"
    tools:context=".app.presentation.MainFragment">

    <TextView
        android:id="@+id/tv_search"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/light_filled"
        android:gravity="start|center"
        android:hint="@string/app_name"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        android:text="@string/search_hint_keywords"
        android:textColor="@color/grey_3"
        app:drawableLeftCompat="@drawable/search_icon"
        android:drawablePadding="8dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_filter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <ImageButton
        android:id="@+id/btn_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/filter_button"
        android:contentDescription="@string/btn_vacancies_filter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_search"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_offers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_search" />

    <TextView
        android:id="@+id/tv_vacancies_for_you"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/vacancies_for_you"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_offers" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_vacancies"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/btn_all_vacancies"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_vacancies_for_you"
        app:layout_constraintVertical_weight="@integer/material_motion_duration_long_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_all_vacancies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:contentDescription="@string/view_all_vacancies"
        android:visibility="gone"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>