<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_relevant_vacancies"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/shadows"
    android:padding="16dp"
    tools:context=".presentation.RelevantVacanciesFragment">

    <LinearLayout
        android:id="@+id/ll_search"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/light_filled"
        android:gravity="start|center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/btn_filter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/button_back"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/tv_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/app_name"
            android:text="@string/search_hint_relevant_vacancies"
            android:textColor="@color/grey_3"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/btn_filter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/filter_button"
        android:contentDescription="@string/btn_vacancies_filter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ll_search"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tv_number_of_vacancies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_search" />

    <TextView
        android:id="@+id/tv_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="@string/sort"
        android:textColor="@color/blue"
        android:textSize="14sp"
        app:drawableRightCompat="@drawable/sort"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_search" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_vacancies"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_number_of_vacancies"
        tools:listitem="@layout/vacancy_item" />

</androidx.constraintlayout.widget.ConstraintLayout>